--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@saber2pr/types-github-api": "^0.0.9",
     "@t3-oss/env-nextjs": "^0.3.1",
     "next": "^13.4.2",
     "react": "18.2.0",
